# rust-api

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  post-start.sh
client/: package-lock.json  package.json
client/src/: App.tsx  main.tsx
migrations/2023-02-22-065706_add_memo_to_posts/: down.sql  up.sql
migrations/2023-02-22-091305_nullable_memo_to_posts/: down.sql  up.sql
src/: graphql.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: bye.txt  hi.txt
