[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
diesel = { version = "2.0.0", features = ["postgres"] }
futures = "0.3.26"
slab = "0.4.8"
