[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
futures = "0.3.26"
google-cloud-default = { version = "0.1.0", features = ["storage"] }
google-cloud-storage = "0.9.0"
handlebars = { version = "4.3.6", features = ["rust-embed"] }
reqwest = "0.11.14"
rust-embed = "6.6.0"
serde_json = "1.0.93"
slab = "0.4.8"
tokio = { version = "1.26.0", features = ["full"] }
